--- a/charts/tp-cp-core-ops/templates/create_admin_user.yaml
+++ b/charts/tp-cp-core-ops/templates/create_admin_user.yaml
@@ -33,24 +33,35 @@ spec:
       nodeSelector:
         kubernetes.io/os: linux
       restartPolicy: Never
+      initContainers:
+      - name: check-pod-dependencies
+        image: {{ include "cp-core-configuration.container-registry" .}}{{"/"}}{{ include "cp-core-configuration.image-repository" . }}{{"/"}}{{ .Values.global.tibco.check_dependencies.distroless_debian.name }}:{{ .Values.global.tibco.check_dependencies.distroless_debian.tag }}
+      {{- if .Values.global.containerSecurityContextTpcpcoreJob }}
+        resources:
+        {{- toYaml .Values.checkPodDependencies.resources | nindent 10 }}
+        securityContext:
+        {{- toYaml .Values.global.containerSecurityContextTpcpcoreJob | nindent 10 }}
+      {{- end }}
+        command: [ 'sh', '-c', 'until [[ "$wget_result" == *"200"* ]]; do echo waiting for identity-management to be running; sleep 1; wget_result=$(wget --spider -S "http://$TP_CP_IDM_HOST:9831/v1/monitor/ping" 2>&1 | grep "HTTP/"); done' ]
+        env:
+          - name: TP_CP_IDM_HOST
+            valueFrom:
+              configMapKeyRef:
+                name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
+                key: TP_CP_IDM_HOST
       {{- if (include "cp-core-configuration.container-registry.secret" .) }}
       imagePullSecrets:
         - name: {{ include "cp-core-configuration.container-registry.secret" . }}
       {{ end }}
       containers:
       - name: tp-control-plane-create-admin-user
-        {{- if .Values.global.containerSecurityContext.tpcpcoreJob }}
+        {{- if .Values.global.containerSecurityContextTpcpcoreJob }}
         securityContext:
-          {{- toYaml .Values.global.containerSecurityContext.tpcpcoreJob | nindent 10 }}
+          {{- toYaml .Values.global.containerSecurityContextTpcpcoreJob | nindent 10 }}
         {{- end }}        
         image: {{ include "cp-core-configuration.container-registry" .}}{{"/"}}{{ include "cp-core-configuration.image-repository" . }}{{"/"}}{{ .Values.global.tibco.image_name.cpScripts }}:{{ include "tp-cp-core-job.generated.buildNumber" . }}
         imagePullPolicy: IfNotPresent
         env:
-        - name: ENVIRONMENT_TYPE
-          valueFrom:
-            configMapKeyRef:
-              name: {{ include "tp-control-plane-ops.consts.cp-env-configmap" . }}
-              key: CP_PROVIDER
         - name: REGION
           valueFrom:
             configMapKeyRef:
@@ -82,7 +93,7 @@ spec:
           - |
             set -o nounset
             set -o errexit
-            if [ "${ENVIRONMENT_TYPE}" == "local" ]; then region="global"; else region=${REGION}; fi
+            region=${REGION}
             echo "Provisioning the Admin Subscription for ${EMAIL_ID}.."
             curl -sS -XPOST -H 'x-atmosphere-for-user: ProvisioningUser' -H "Content-type: application/json" -H "Host: ${TSC_DNS_DOMAIN}" -H "x-real-ip: 0.0.0.0" -d '{"externalAccountId": "'"$EXTERNAL_ACCOUNT_ID"'","externalSubscriptionId": "'"$EXTERNAL_SUBSCRIPTION_ID"'","firstName":"'"$FIRSTNAME"'","lastName":"'"$LASTNAME"'","email": "'"$EMAIL_ID"'","organizationName":"TSC Admin Subscription '"$region"'","hostPrefix":"admin","prefixId":"tibc","tenantSubscriptionDetails": [{"eula": true,"region": "'${region}'","expiryInMonths": -1,"planId": "TIB_CLD_ADMIN_TIB_CLOUDOPS","tenantId": "ADMIN","seats": {"ADMIN": {"ENGR": -1,"PM": -1,"SUPT": -1,"OPS": -1,"PROV": -1,"TSUPT": -1}}}],"skipEmail": false}' 'http://'${TP_CP_ORCH_HOST}:8833'/v1/tibco-subscriptions'
             echo "Subscription for ${EMAIL_ID} provisioned successfully."
