--- a/charts/tp-cp-core/charts/cronjobs/values.yaml
+++ b/charts/tp-cp-core/charts/cronjobs/values.yaml
@@ -9,16 +9,23 @@ global:
   tibco:
     image_name:
       cronjobs: ""
-    image_repo_path: ""      
+    image_repo_path: ""
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     logging:
       fluentbit:
         image:
           name: "common-fluentbit"
-          tag: 3.1.4
+          tag: 3.2.2
     check_dependencies:
       distroless_debian:
         name: "common-distroless-base-debian-debug"
         tag: 12
+    cronjobs:
+      disableProvisionInfraCapabilitiesJob: "false"
+      disableGdprPurgeHistoryJob: "true"
+      disableIdmCleanUpJob: "false"
+      disableIdmNotifyCertificatesExpiryJob: "true"
 
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
@@ -39,41 +46,38 @@ global:
   containerSecurityContext:
     # It specifies that privilege escalation is not allowed for security reasons.
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
-    cronjobs:
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-            - ALL
-    # The fluentbit configuration section.
-    # It specifies that the fluentbit should not run as a non-root user and the user ID should be 0 (root).
-    # Privilege escalation is not allowed for security reasons.
-    # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
-    # GitHub issue: https://github.com/fluent/fluent-bit/issues/872#issuecomment-827763207, https://github.com/kyma-project/kyma/pull/11657/files
-    fluentbit:
-      securityContext:
-      runAsNonRoot: false
-      runAsUser: 0
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-          - ALL
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
+    capabilities:
+      drop:
+        - ALL
+        - CAP_NET_RAW
 # Resource values for production like setup
 cpcronjobservice:
   resources:
     requests:
-      cpu: "120m"
-      memory: "512Mi"
+      cpu: "50m"
+      memory: "50Mi"
     limits:
-      cpu: "120m"
-      memory: "1Gi"
+      cpu: "200m"
+      memory: "256Mi"
 fluentbit:
   resources:
     requests:
-      cpu: "100m"
+      cpu: "50m"
       memory: "100Mi"
     limits:
-      cpu: "150m"
+      cpu: "100m"
       memory: "150Mi"
+checkPodDependencies:
+  resources:
+    requests:
+      cpu: "10m"
+      memory: "20Mi"
+    limits:
+      cpu: "30m"
+      memory: "40Mi"
+
 
 # HPA
 hpa:
