--- a/charts/tp-cp-core/charts/identity-management/values.yaml
+++ b/charts/tp-cp-core/charts/identity-management/values.yaml
@@ -7,9 +7,14 @@
 global:
   tibco:
     self_hosted_deployment: true
-    idm_cp_jwks_uri: "/private/tsc/config/idm/own-keystores/cic_cli_host.pem"
+    idm_cp_jwt_keystore_url: "/private/tsc/config/idm/own-keystores/jwt.p12"
+    idm_cp_tibcoaccounts_keystore_url: "/private/tsc/config/idm/own-keystores/cic_cloud.p12"
+    idm_cp_self_generated_keystore_url: "/private/tsc/config/idm/own-keystores/on-prem-idm.p12"
+    idm_cp_tibcoaccounts_certs: "/private/tsc/config/idm/own-keystores/TA_certs.pem"
     region: "global"
     region_to_prefix: ""
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     image_name:
       identityManagement: ""
     image_repo_path: ""
@@ -17,7 +22,7 @@ global:
       fluentbit:
         image:
           name: "common-fluentbit"
-          tag: 3.1.4
+          tag: 3.2.2
     check_dependencies:
       distroless_debian:
         name: "common-distroless-base-debian-debug"
@@ -25,6 +30,7 @@ global:
   external:
     region: ""
     enableLogging: false
+    environment: ""
 
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
@@ -43,42 +49,37 @@ global:
       type: RuntimeDefault
 
   containerSecurityContext:
-    idm:
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-          - ALL
-
-    # The fluentbit configuration section.
-    # It specifies that the fluentbit should not run as a non-root user and the user ID should be 0 (root).
-    # Privilege escalation is not allowed for security reasons.
-    # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
-    # GitHub issue: https://github.com/fluent/fluent-bit/issues/872#issuecomment-827763207, https://github.com/kyma-project/kyma/pull/11657/files
-    fluentbit:
-      securityContext:
-      runAsNonRoot: false
-      runAsUser: 0
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-          - ALL
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
+    capabilities:
+      drop:
+        - ALL
+        - CAP_NET_RAW
 
 idm:
   resources:
     requests:
-      cpu: "500m"
-      memory: "2Gi"
+      cpu: "200m"
+      memory: "1024Mi"
     limits:
       cpu: "500m"
-      memory: "4Gi"
+      memory: "2048Mi"
 fluentbit:
   resources:
     requests:
-      cpu: "100m"
+      cpu: "50m"
       memory: "100Mi"
     limits:
-      cpu: "150m"
+      cpu: "100m"
       memory: "150Mi"
+checkPodDependencies:
+  resources:
+    requests:
+      cpu: "10m"
+      memory: "20Mi"
+    limits:
+      cpu: "30m"
+      memory: "40Mi"
 
 hpa:
   cpu: 70
