--- a/charts/tp-cp-core/charts/pengine/values.yaml
+++ b/charts/tp-cp-core/charts/pengine/values.yaml
@@ -9,15 +9,18 @@ global:
     image_name:
       pengine: ""
     image_repo_path: ""
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     is_replica_region: false
     logging:
       fluentbit:
         image:
           name: "common-fluentbit"
-          tag: 3.1.4
+          tag: 3.2.2
   external:
     enableLogging: false
     region: ""
+    db_ssl_mode: "disable"
 
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
@@ -38,41 +41,29 @@ global:
   containerSecurityContext:
     # It specifies that privilege escalation is not allowed for security reasons.
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
-    tpcppengineservice:
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-          - ALL
-    # The fluentbit configuration section.
-    # It specifies that the fluentbit should not run as a non-root user and the user ID should be 0 (root).
-    # Privilege escalation is not allowed for security reasons.
-    # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
-    # GitHub issue: https://github.com/fluent/fluent-bit/issues/872#issuecomment-827763207, https://github.com/kyma-project/kyma/pull/11657/files
-    fluentbit:
-      securityContext:
-      runAsNonRoot: false
-      runAsUser: 0
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-          - ALL
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
+    capabilities:
+      drop:
+        - ALL
+        - CAP_NET_RAW
 
 # Resource values for production like setup
 tpcppengineservice:
   resources:
     requests:
       cpu: "500m"
-      memory: "2Gi"
+      memory: "512Mi"
     limits:
-      cpu: "500m"
-      memory: "4Gi"
+      cpu: "1000m"
+      memory: "1024Mi"
 fluentbit:
   resources:
     requests:
-      cpu: "100m"
+      cpu: "50m"
       memory: "100Mi"
     limits:
-      cpu: "150m"
+      cpu: "100m"
       memory: "150Mi"
 
 # HPA
