--- a/charts/tp-cp-core/charts/user-subscriptions/values.yaml
+++ b/charts/tp-cp-core/charts/user-subscriptions/values.yaml
@@ -15,11 +15,13 @@ global:
       userSubscriptions: ""
     image_repo_path: ""
     is_replica_region: false
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     logging:
       fluentbit:
         image:
           name: "common-fluentbit"
-          tag: 3.1.4
+          tag: 3.2.2
     check_dependencies:
       distroless_debian:
         name: "distroless-base-debian-debug"
@@ -44,43 +46,38 @@ global:
   containerSecurityContext:
     # It specifies that privilege escalation is not allowed for security reasons.
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
-    userSub:
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-          - ALL
-
-    # The fluentbit configuration section.
-    # It specifies that the fluentbit should not run as a non-root user and the user ID should be 0 (root).
-    # Privilege escalation is not allowed for security reasons.
-    # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
-    # GitHub issue: https://github.com/fluent/fluent-bit/issues/872#issuecomment-827763207, https://github.com/kyma-project/kyma/pull/11657/files
-    fluentbit:
-      securityContext:
-      runAsNonRoot: false
-      runAsUser: 0
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-          - ALL
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
+    capabilities:
+      drop:
+        - ALL
+        - CAP_NET_RAW
 
 # Resource values for production like setup
 cpusersubservice:
   resources:
     requests:
       cpu: "500m"
-      memory: "2Gi"
+      memory: "256Mi"
     limits:
       cpu: "500m"
-      memory: "4Gi"
+      memory: "1024Mi"
 fluentbit:
   resources:
     requests:
-      cpu: "100m"
+      cpu: "50m"
       memory: "100Mi"
     limits:
-      cpu: "150m"
+      cpu: "100m"
       memory: "150Mi"
+checkPermissionEngine:
+  resources:
+    requests:
+      cpu: "10m"
+      memory: "20Mi"
+    limits:
+      cpu: "30m"
+      memory: "40Mi"
 
 # HPA
 hpa:
