--- a/charts/tp-cp-core/values.yaml
+++ b/charts/tp-cp-core/values.yaml
@@ -13,6 +13,11 @@ global:
   tibco:
     region: "global"
     region_to_prefix: '{"TSC":{"global":""},"ADMIN":{"global":""}}'
+    cronjobs:
+      disableProvisionInfraCapabilitiesJob: "false"
+      disableGdprPurgeHistoryJob: "true"
+      disableIdmCleanUpJob: "false"
+      disableIdmNotifyCertificatesExpiryJob: "true"
     image_name:
       adminWebserver: "core-admin-webserver"
       webserver: "core-web-server"
@@ -24,11 +29,16 @@ global:
       identityProvider: "core-identity-provider"
       pengine: "core-pengine"
       cpScripts: "core-cp-scripts"
+    helm:
+      url: "https://tibcosoftware.github.io"
+      repo: "tp-helm-charts"
+      username: ""
+      password: ""
     logging:
       fluentbit:
         image:
           name: "common-fluentbit"
-          tag: 3.1.4
+          tag: 3.2.2
     check_dependencies:
       distroless_debian:
         name: "common-distroless-base-debian-debug"
@@ -36,7 +46,8 @@ global:
     self_hosted_deployment: true
     is_replica_region: false
     finops: "disable"
-
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
   external:
     db_host: ""
     db_master_writer_host: ""
@@ -48,10 +59,11 @@ global:
     db_secret_name: ""
     environment: "production"
     db_ssl_mode: "disable"
-    db_ssl_root_cert: ""
     fromAndReplyToEmailAddress: "not-set-yet"
     cronJobReportsEmailAlias: ""
     platformEmailNotificationCcAddresses: ""
+    externalIdpRequestToAddresses: ""
+    externalIdpRequestCcAddresses: ""
     emailServerType: "smtp"
     emailServer:
       ses:
@@ -80,11 +92,12 @@ global:
     seccompProfile:
       type: RuntimeDefault
 
-  containerSecurityContext:
+  containerSecurityContextTpcpcoreJob:
     # It specifies that privilege escalation is not allowed for security reasons.
     # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
-    tpcpcoreJob:
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-          - ALL
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
+    capabilities:
+      drop:
+        - CAP_NET_RAW
+        - ALL
